--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "gaomingcode/gauge.js",
+    "name": "gaomingcode/date.js",
     "description": "DateJS is the most full-featured, internationalized, open-source JavaScript Date Library.",
     "type": "library",
     "license": [
